--- a/hiring.html
+++ b/hiring.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link rel="stylesheet" href="./assets/css/style.css?v=1.2">
-    <link rel="stylesheet" href="assets/css/modal.css" />
+    <link rel="stylesheet" href="./assets/css/modal.css" />
 </head>
 
 <body>
@@ -23,7 +23,7 @@
                 <p class="label">Corporate</p>
             </div>
             <nav>
-                <a href="#" class="nav-item">
+                <a href="dashboard.html" class="nav-item">
                     <div class="nav-item-container">
                         <span class="nav-item-icon">
                             <i class="fas fa-window"></i>
@@ -31,6 +31,45 @@
                         <p class="nav-item-label">Dashboard</p>
                     </div>
                 </a>
+                <a href="" class="nav-item">
+                    <div class="nav-item-container">
+                        <span class="nav-item-icon">
+                            <i class="fas fa-building"></i>
+                        </span>
+                        <p class="nav-item-label">Profile</p>
+                    </div>
+                </a>
+                <!-- Collapsable parent start -->
+                <a href="#" class="nav-item nav-item-collapsable-parent">
+                    <div class="nav-item-container">
+                        <span class="nav-item-icon">
+                            <i class="fas fa-plus-square"></i>
+                        </span>
+                        <p class="nav-item-label">Create a job</p>
+                    </div>
+                    <div class="nav-item-expand">
+                        <span><i class="fas fa-chevron-down"></i></span>
+                    </div>
+                </a>
+                <!-- Collapsable children start -->
+                <a href="hiring.html" class="nav-item nav-item-collapsable-child child-active">
+                    <div class="nav-item-container">
+                        <span class="nav-item-icon">
+                            <i class="fas fa-file-alt"></i>
+                        </span>
+                        <p class="nav-item-label">Hiring Criteria</p>
+                    </div>
+                </a>
+                <a href="jobs.html" class="nav-item nav-item-collapsable-child">
+                    <div class="nav-item-container">
+                        <span class="nav-item-icon">
+                            <i class="fas fa-briefcase"></i>
+                        </span>
+                        <p class="nav-item-label">Job</p>
+                    </div>
+                </a>
+                <!-- Collapsable children end -->
+                <!-- Collapsable parent end -->
                 <!-- Collapsable parent start -->
                 <a href="#" class="nav-item nav-item-collapsable-parent">
                     <div class="nav-item-container">
@@ -44,22 +83,6 @@
                     </div>
                 </a>
                 <!-- Collapsable children start -->
-                <a href="#" class="nav-item active nav-item-collapsable-child">
-                    <div class="nav-item-container">
-                        <span class="nav-item-icon">
-                            <i class="fas fa-briefcase"></i>
-                        </span>
-                        <p class="nav-item-label">Jobs</p>
-                    </div>
-                </a>
-                <a href="#" class="nav-item nav-item-collapsable-child">
-                    <div class="nav-item-container">
-                        <span class="nav-item-icon">
-                            <i class="fas fa-file-alt"></i>
-                        </span>
-                        <p class="nav-item-label">Hiring Criteria</p>
-                    </div>
-                </a>
                 <a href="#" class="nav-item nav-item-collapsable-child">
                     <div class="nav-item-container">
                         <span class="nav-item-icon">
@@ -71,9 +94,34 @@
                 <a href="#" class="nav-item nav-item-collapsable-child">
                     <div class="nav-item-container">
                         <span class="nav-item-icon">
+                            <i class="fas fa-file-alt"></i>
+                        </span>
+                        <p class="nav-item-label">Hiring Criteria</p>
+                    </div>
+                </a>
+                <a href="publish-jobs.html" class="nav-item nav-item-collapsable-child">
+                    <div class="nav-item-container">
+                        <span class="nav-item-icon">
+                            <i class="fas fa-briefcase"></i>
+                        </span>
+                        <p class="nav-item-label">Jobs</p>
+                    </div>
+                </a>
+
+                <a href="#" class="nav-item nav-item-collapsable-child">
+                    <div class="nav-item-container">
+                        <span class="nav-item-icon">
                             <i class="fas fa-file"></i>
                         </span>
-                        <p class="nav-item-label">Information</p>
+                        <p class="nav-item-label">Other Information</p>
+                        </div>
+                        </a>
+                        <a href="#" class="nav-item nav-item-collapsable-child">
+                            <div class="nav-item-container">
+                                <span class="nav-item-icon">
+                                    <i class="fas fa-history"></i>
+                                </span>
+                                <p class="nav-item-label">Publish History</p>
                     </div>
                 </a>
                 <!-- Collapsable children end -->
@@ -130,9 +178,9 @@
                 <a href="#" class="nav-item">
                     <div class="nav-item-container">
                         <span class="nav-item-icon">
-                            <i class="fas fa-university"></i>
+                            <i class="fas fa-file"></i>
                         </span>
-                        <p class="nav-item-label">Account</p>
+                        <p class="nav-item-label">Transaction History</p>
                     </div>
                 </a>
                 <a href="#" class="nav-item">
@@ -150,7 +198,7 @@
             </nav>
         </div>
         <div class="main-container">
-            <div class="topbar" style="z-index: 1;">
+            <div class="topbar">
                 <p class="date">Wednesday, 10th Febraury 2021</p>
                 <div class="input-group search">
                     <input type="text" class="form-control" placeholder="Search">
@@ -162,25 +210,16 @@
                     <button type="button" class="btn btn-primary dropdown-toggle points-btn" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false" data-offset="0,10">
                         <p class="btn-label">
-                            Credits
+                            Available Tokens
                         </p>
-                        <span class="p-icon-container">
-                            <p class="p-icon">P</p>
-                        </span>
                         <p class="points">162</p>
                     </button>
                     <div class="dropdown-menu dropdown-menu-right">
                         <div class="points-container">
                             <div class="credits-container">
-                                <p class="label-head">PGK CREDITS</p>
+                                <p class="label-head">Available Tokens</p>
+                                <p class="label-body">162</p>
                                 <div class="credits-body">
-                                    <p class="credits-head">Available Balance</p>
-                                    <div class="credits-points">
-                                        <div class="credit-points-icon">
-                                            <p class="points-icon">P</p>
-                                        </div>
-                                        <p class="credits-points-label">162</p>
-                                    </div>
                                     <table class="credits-table">
                                         <tbody>
                                             <tr class="t-row">
@@ -197,7 +236,7 @@
                             </div>
                             <div class="add-credits-container" data-toggle="modal" data-target="#exampleModalCenter">
                                 <i class="fas fa-plus-circle"></i>
-                                <p class="label">Add Credits</p>
+                                <p class="label">Add Tokens</p>
                             </div>
                         </div>
                     </div>
