--- a/jobs.html
+++ b/jobs.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jobs</title>
+    <title>Dashboard</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -22,7 +22,7 @@
                 <p class="label">Corporate</p>
             </div>
             <nav>
-                <a href="#" class="nav-item">
+                <a href="dashboard.html" class="nav-item">
                     <div class="nav-item-container">
                         <span class="nav-item-icon">
                             <i class="fas fa-window"></i>
@@ -30,6 +30,45 @@
                         <p class="nav-item-label">Dashboard</p>
                     </div>
                 </a>
+                <a href="" class="nav-item">
+                    <div class="nav-item-container">
+                        <span class="nav-item-icon">
+                            <i class="fas fa-building"></i>
+                        </span>
+                        <p class="nav-item-label">Profile</p>
+                    </div>
+                </a>
+                <!-- Collapsable parent start -->
+                <a href="#" class="nav-item nav-item-collapsable-parent">
+                    <div class="nav-item-container">
+                        <span class="nav-item-icon">
+                            <i class="fas fa-plus-square"></i>
+                        </span>
+                        <p class="nav-item-label">Create a job</p>
+                    </div>
+                    <div class="nav-item-expand">
+                        <span><i class="fas fa-chevron-down"></i></span>
+                    </div>
+                </a>
+                <!-- Collapsable children start -->
+                <a href="hiring.html" class="nav-item nav-item-collapsable-child">
+                    <div class="nav-item-container">
+                        <span class="nav-item-icon">
+                            <i class="fas fa-file-alt"></i>
+                        </span>
+                        <p class="nav-item-label">Hiring Criteria</p>
+                    </div>
+                </a>
+                <a href="jobs.html" class="nav-item nav-item-collapsable-child child-active">
+                    <div class="nav-item-container">
+                        <span class="nav-item-icon">
+                            <i class="fas fa-briefcase"></i>
+                        </span>
+                        <p class="nav-item-label">Job</p>
+                    </div>
+                </a>
+                <!-- Collapsable children end -->
+                <!-- Collapsable parent end -->
                 <!-- Collapsable parent start -->
                 <a href="#" class="nav-item nav-item-collapsable-parent">
                     <div class="nav-item-container">
@@ -43,22 +82,6 @@
                     </div>
                 </a>
                 <!-- Collapsable children start -->
-                <a href="#" class="nav-item active nav-item-collapsable-child">
-                    <div class="nav-item-container">
-                        <span class="nav-item-icon">
-                            <i class="fas fa-briefcase"></i>
-                        </span>
-                        <p class="nav-item-label">Jobs</p>
-                    </div>
-                </a>
-                <a href="#" class="nav-item nav-item-collapsable-child">
-                    <div class="nav-item-container">
-                        <span class="nav-item-icon">
-                            <i class="fas fa-file-alt"></i>
-                        </span>
-                        <p class="nav-item-label">Hiring Criteria</p>
-                    </div>
-                </a>
                 <a href="#" class="nav-item nav-item-collapsable-child">
                     <div class="nav-item-container">
                         <span class="nav-item-icon">
@@ -70,9 +93,34 @@
                 <a href="#" class="nav-item nav-item-collapsable-child">
                     <div class="nav-item-container">
                         <span class="nav-item-icon">
+                            <i class="fas fa-file-alt"></i>
+                        </span>
+                        <p class="nav-item-label">Hiring Criteria</p>
+                    </div>
+                </a>
+                <a href="publish-jobs.html" class="nav-item nav-item-collapsable-child">
+                    <div class="nav-item-container">
+                        <span class="nav-item-icon">
+                            <i class="fas fa-briefcase"></i>
+                        </span>
+                        <p class="nav-item-label">Jobs</p>
+                    </div>
+                </a>
+
+                <a href="#" class="nav-item nav-item-collapsable-child">
+                    <div class="nav-item-container">
+                        <span class="nav-item-icon">
                             <i class="fas fa-file"></i>
                         </span>
-                        <p class="nav-item-label">Information</p>
+                        <p class="nav-item-label">Other Information</p>
+                        </div>
+                        </a>
+                        <a href="#" class="nav-item nav-item-collapsable-child">
+                            <div class="nav-item-container">
+                                <span class="nav-item-icon">
+                                    <i class="fas fa-history"></i>
+                                </span>
+                                <p class="nav-item-label">Publish History</p>
                     </div>
                 </a>
                 <!-- Collapsable children end -->
@@ -129,9 +177,9 @@
                 <a href="#" class="nav-item">
                     <div class="nav-item-container">
                         <span class="nav-item-icon">
-                            <i class="fas fa-university"></i>
+                            <i class="fas fa-file"></i>
                         </span>
-                        <p class="nav-item-label">Account</p>
+                        <p class="nav-item-label">Transaction History</p>
                     </div>
                 </a>
                 <a href="#" class="nav-item">
@@ -149,7 +197,7 @@
             </nav>
         </div>
         <div class="main-container">
-            <div class="topbar" style="z-index: 1;">
+            <div class="topbar">
                 <p class="date">Wednesday, 10th Febraury 2021</p>
                 <div class="input-group search">
                     <input type="text" class="form-control" placeholder="Search">
@@ -158,28 +206,19 @@
                     </div>
                 </div>
                 <div class="btn-group">
-                    <button type="button" class="btn btn-primary dropdown-toggle points-btn" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false" data-offset="0,10">
+                    <button type="button" class="btn btn-primary dropdown-toggle points-btn" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false" data-offset="0,10">
                         <p class="btn-label">
-                            Credits
+                            Available Tokens
                         </p>
-                        <span class="p-icon-container">
-                            <p class="p-icon">P</p>
-                        </span>
                         <p class="points">162</p>
                     </button>
                     <div class="dropdown-menu dropdown-menu-right">
                         <div class="points-container">
                             <div class="credits-container">
-                                <p class="label-head">PGK CREDITS</p>
+                                <p class="label-head">Available Tokens</p>
+                                <p class="label-body">162</p>
                                 <div class="credits-body">
-                                    <p class="credits-head">Available Balance</p>
-                                    <div class="credits-points">
-                                        <div class="credit-points-icon">
-                                            <p class="points-icon">P</p>
-                                        </div>
-                                        <p class="credits-points-label">162</p>
-                                    </div>
                                     <table class="credits-table">
                                         <tbody>
                                             <tr class="t-row">
@@ -196,7 +235,7 @@
                             </div>
                             <div class="add-credits-container" data-toggle="modal" data-target="#exampleModalCenter">
                                 <i class="fas fa-plus-circle"></i>
-                                <p class="label">Add Credits</p>
+                                <p class="label">Add Tokens</p>
                             </div>
                         </div>
                     </div>
@@ -211,7 +250,7 @@
             <div class="page-body">
                 <div class="row published-jobs-section">
                     <div class="d-flex flex-column justify-content-start align-items-center w-full">
-                        <p class="heading">Jobs Published</p>
+                        <p class="heading">Jobs Created</p>
                         <div class="d-flex flex-row justify-content-between align-items-center jobs-list-item w-full">
                             <div class="item d-flex flex-row justify-content-between align-items-center w-full">
                                 <div class="job-icon job-blue-icon d-flex justify-content-center align-items-center">
@@ -224,7 +263,7 @@
                                 <select name="" class="form-control job-dropdown">
                                     <option value="">Open</option>
                                 </select>
-                                <p class="job-published-date">Published on 09/02/2021</p>
+                                <p class="job-published-date">Created on 09/02/2021</p>
                             </div>
                             <div class="vertical-divider"></div>
                             <div
@@ -248,7 +287,7 @@
                                 <select name="" class="form-control job-dropdown">
                                     <option value="">Open</option>
                                 </select>
-                                <p class="job-published-date">Published on 09/02/2021</p>
+                                <p class="job-published-date">Created on 09/02/2021</p>
                             </div>
                             <div class="vertical-divider"></div>
                             <div
@@ -260,18 +299,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="add-job-btn"> Add New Job</div>
+                        <a href="add-job.html">
+                            <div class="add-job-btn"> Add New Job</div>
+                        </a>
                     </div>
-                </div>
-            </div>
-            <div class="row jobs-saved-section">
-                <div class="d-flex flex-column justify-content-start align-items-center w-full">
-                    <p class="heading w-full">Jobs Saved</p>
-                </div>
-            </div>
-            <div class="row jobs-saved-section-list">
-                <div class="d-flex flex-column justify-content-start align-items-center w-full">
-                    <p class="no-list-message w-full">No jobs saved to display here</p>
                 </div>
             </div>
         </div>
@@ -279,58 +310,67 @@
     <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
         aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
-            <div class="modal-content job-details-modal">
-                <div class="modal-header job-details-modal-header">
+            <div class="modal-content job-publish-modal">
+                <div class="modal-header job-publish-modal-header">
                     <p class="heading w-full">Job Details</p>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div
-                    class="modal-body job-details-modal-body d-flex flex-column justify-content-center align-items-center">
-                    <div class="header d-flex flex-row justify-content-between align-items-center">
-                        <input type="text" class="form-control" value="Job - 3" />
-                        <select name="" class="form-control">
-                            <option value="">Hiring Criteria</option>
-                        </select>
-                        <select name="" class="form-control">
-                            <option value="">Open</option>
-                        </select>
-                    </div>
-                    <table class="table table-borderless table-striped job-details-table">
-                        <thead class="job-details-table-header">
-                            <tr class="bg-grey opacity-04">
-                                <td class="table-heading">Skill Set</td>
-                                <td class="table-heading">No of Positions</td>
-                                <td class="table-heading">Location</td>
-                                <td class="table-heading">Salary Range</td>
-                                <td class="table-heading">Date of hiring</td>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Programming</td>
-                                <td>547</td>
-                                <td>Hyderabad</td>
-                                <td>5L - 7L</td>
-                                <td>22 - Feb - 2021</td>
-                            </tr>
-                            <tr>
-                                <td>Oracle</td>
-                                <td>258</td>
-                                <td>Bangalore</td>
-                                <td>6L - 8L</td>
-                                <td>01 - Mar - 2021</td>
-                            </tr>
-                            <tr>
-                                <td>Java</td>
-                                <td>389</td>
-                                <td>Pune</td>
-                                <td>5L - 7L</td>
-                                <td>07 - Mar - 2021</td>
-                            </tr>
-                        </tbody>
-                    </table>
+                    class="modal-body job-publish-modal-body d-flex flex-column justify-content-center align-items-center">
+                    <div class="heading-section d-flex justify-content-start align-items-start w-full">
+                        <div class="d-flex flex-column justify-content-start align-items-center w-full body-section">
+                            <div class="header d-flex flex-row justify-content-between align-items-center w-full">
+                                <p class="job-label">Job - 1</p>
+                                <div class="job-heading-btn">Open</div>
+                                <select name="" class="form-control">
+                                    <option value="">Hiring Criteria</option>
+                                </select>
+                                <div class="d-flex flex-row justify-content-between align-items-center">
+                                    <p class="label">Details</p>
+                                    <i class="fas fa-chevron-up"></i>
+                                </div>
+                            </div>
+                            <table class="table table-borderless table-striped job-publish-table">
+                                <thead class="job-publish-table-header">
+                                    <tr>
+                                        <td class="table-heading">Skill Set</td>
+                                        <td class="table-heading">No of Positions</td>
+                                        <td class="table-heading">Location</td>
+                                        <td class="table-heading">Salary Range</td>
+                                        <td class="table-heading">Date of hiring</td>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Programming</td>
+                                        <td>547</td>
+                                        <td>Hyderabad</td>
+                                        <td>5L - 7L</td>
+                                        <td>22 - Feb - 2021</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Oracle</td>
+                                        <td>258</td>
+                                        <td>Bangalore</td>
+                                        <td>6L - 8L</td>
+                                        <td>01 - Mar - 2021</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Java</td>
+                                        <td>389</td>
+                                        <td>Pune</td>
+                                        <td>5L - 7L</td>
+                                        <td>07 - Mar - 2021</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                            <div class="d-flex flex-row justify-content-center align-items-center w-full mt-4">
+                                <div class="job-btn">Edit Job</div>
+                            </div>
+                            </div>
+                            </div>
                 </div>
             </div>
         </div>
