--- a/hiring.html
+++ b/hiring.html
@@ -270,6 +270,26 @@
                     <p class="no-list-message w-full">No jobs saved to display here</p>
                 </div>
             </div>
+            <div class="d-flex flex-row justify-content-between align-items-center jobs-list-item w-full">
+                <div class="item d-flex flex-row justify-content-between align-items-center w-full">
+                    <div class="job-icon job-blue-icon d-flex justify-content-center align-items-center">
+                        <i class="fas fa-cube"></i>
+                    </div>
+                    <p class="job-label">Hiring Criteria - 1</p>
+                    <button class="btn2">B.Tech</button>
+                    <p class="job-published-date">Computer Science & Engineering</p>
+                    <p class="job-published-date">Published on 09/02/2021</p>
+                </div>
+                <div class="vertical-divider"></div>
+                <div
+                    class="job-list-item-details-container d-flex flex-row justify-content-center align-items-center">
+                    <div class="job-details-btn d-flex flex-row justify-content-around align-items-center"
+                        data-toggle="modal" data-target="#hiringCriteriaDetails">
+                        <p>Details</p>
+                        <i class="fas fa-chevron-right"></i>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -497,6 +517,7 @@
             </div>
         </div>
     </div>
+
     <!-- HIRING CRITERIA DETAILS-->
     <div class="modal fade" id="hiringCriteriaDetails" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
         aria-hidden="true">
@@ -579,7 +600,7 @@
                                         required />
                                 </div>
                             </div>
-                            <div class="col-md px-1">
+                            <div class="col-md pl-1">
                                 <div class="modal-grp">
                                     <label class="inp-caption">During Grad.</label>
                                     <input type="text" name="" class="modal-inp" value="No" placeholder="Name of the Hiring Criteria *"
