added policies and terms

--- a/c2hire/home-page.html
+++ b/c2hire/home-page.html
@@ -107,7 +107,7 @@
                 </div>
             </div>
             <div class="col-md-7 col-sm-12 cycle-img pl-0">
-                <img src="./img/rs=h_1000,cg_true.webp" width="100%" height="100%" alt="">
+                <img src="./img/C2Hire_Image.png" width="100%" height="100%" alt="">
             </div>
         </div>
         <div class="row">
