--- a/c2hire/refund-policy.html
+++ b/c2hire/refund-policy.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Home</title>
+    <title>Refund Policy</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -19,7 +19,7 @@
         <a class="navbar-brand" href="#">C2Hire.</a>
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" href="home-page.html">Home</a>
             </li>
             <li class="nav-item">
                 <div class="dropdown">
@@ -56,59 +56,74 @@
                     </div>
                 </div>
             </li>
-            <li class="nav-item ml-3">
+            <li class=" ml-3">
                 <button class="form-btns btn">Login</button>
             </li>
-            <li class="nav-item">
+            <li>
                 <button class="form-btns btn">Sign Up</button>
             </li>
         </ul>
 
     </nav>
-    <div class="container">
-        <div class="policy-heading mt-3 mb-3">
-            <h1>Refund Policy
-            </h1>
+    <section class="page-body">
+
+        <div class="container policy-terms">
+            <div class="policy-heading mt-3 mb-3">
+                <h1>Refund Policy
+                </h1>
+                <hr>
+            </div>
+            <div class="container policy-paragraphs padspacing terms-para">
+
+                <p>
+                    Thank you for being a part of us . We want to make sure that our stakeholders have an exceptional
+                    experience. As with any online purchase experience, the below are the terms and conditions that
+                    govern
+                    the
+                    Refund Policy. When you registered for a service on the <a
+                        href="https://c2hire.com">https://c2hire.com</a>,
+                    you agree to Terms and
+                    Conditions covered below.
+                </p>
+                <p>
+                    <label class="d-block">Cancellation & Refunds</label>
+
+                    Due to the complex nature of collaboration between stakeholders, we cannot refund the payment.
+                    However,
+                    in
+                    remote circumstances which could be beyond the scope, we request you to send out an email to
+                    <a href="mailto:contact@c2hire.com">contact@c2hire.com</a> with the relevant information and we will
+                    try
+                    our
+                    best to accommodate the cancellation
+                    and refund request.
+
+                </p>
+                <p>
+
+
+                    <label class="d-block">Refunds: Duplicate payment</label>
+
+                    Refund of the duplicate payment made by the stakeholder will be processed by cheque/online payment
+                    within 30
+                    days after intimation by the stakeholders.
+                </p>
+                <p>
+                    <label>Note:</label> All refunds will be processed within 30 days of receipt of the refund request
+                    and
+                    the
+                    transaction/payment gateway charges will be deducted as per actuals.
+                </p>
+
+            </div>
         </div>
-        <div class="container policy-paragraphs padspacing">
-            
-        <p>
-            Thank you for being a part of us . We want to make sure that our stakeholders have an exceptional
-            experience. As with any online purchase experience, the below are the terms and conditions that govern the
-            Refund Policy. When you registered for a service on the <a href="https://c2hire.com">https://c2hire.com</a>,
-            you agree to Terms and
-            Conditions covered below.
-        </p>
-        <p>
-           <label class="d-block">Cancellation & Refunds</label>
-
-            Due to the complex nature of collaboration between stakeholders, we cannot refund the payment. However, in
-            remote circumstances which could be beyond the scope, we request you to send out an email to
-            <a href="mailto:contact@c2hire.com">contact@c2hire.com</a> with the relevant information and we will try our
-            best to accommodate the cancellation
-            and refund request.
-
-        </p>
-        <p>
-
-
-           <label class="d-block">Refunds: Duplicate payment</label>
-
-            Refund of the duplicate payment made by the stakeholder will be processed by cheque/online payment within 30
-            days after intimation by the stakeholders.
-        </p>
-        <p>
-          <label>Note:</label> All refunds will be processed within 30 days of receipt of the refund request and the
-            transaction/payment gateway charges will be deducted as per actuals.
-        </p>
-        
-    </div>
-    </div>
+    </section>
+    <!-- ----footer----- -->
     <footer class="footer-block">
         <div class="container">
             <div class="row my-5">
                 <div class="col-md-4 col-sm-12 mb-3 address-details">
-                    <h1>C2 Hire</h1>
+                    <h1>C2 Hire.</h1>
                     <p>ADDRESS</p>
                     <p>Plot no: 32, jayabheri Enclave Phase-2, Gachibowli, Hyderabad-500032</p>
                     <p>
@@ -143,9 +158,9 @@
                         Send us a message
                     </button>
                     <div class="d-block policy-links">
-                        <a href="">Privacy Policy </a>|
-                        <a href="">Terms & conditions </a>|
-                        <a href="">Refund Policy </a>
+                        <a href="privacy-policy.html" target="blank">Privacy Policy </a>|
+                        <a href="terms-conditions.html" target="blank">Terms & conditions </a>|
+                        <a href="refund-policy.html" target="blank">Refund Policy </a>
                     </div>
                 </div>
             </div>
