--- a/c2hire/privacy-policy.html
+++ b/c2hire/privacy-policy.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Home</title>
+    <title>Privacy policy</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -19,7 +19,7 @@
         <a class="navbar-brand" href="#">C2Hire.</a>
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" href="home-page.html">Home</a>
             </li>
             <li class="nav-item">
                 <div class="dropdown">
@@ -56,61 +56,70 @@
                     </div>
                 </div>
             </li>
-            <li class="nav-item ml-3">
+            <li class=" ml-3">
                 <button class="form-btns btn">Login</button>
             </li>
-            <li class="nav-item">
+            <li>
                 <button class="form-btns btn">Sign Up</button>
             </li>
         </ul>
 
     </nav>
-    <div class="container">
-        <div class="policy-heading mt-3 mb-3">
-            <h1>Privacy Policy
-            </h1>
-        </div>
-        <div class="container policy-paragraphs padspacing">
-            <p>
-                Your privacy is very important to us. Accordingly, we have developed this Policy in order for you to
-                understand how we collect, use, communicate and disclose and make use of personal information. The
-                following outlines our privacy policy.
-            </p>
-            <ul>
+    <section class="page-body">
 
-                <li>Before or at the time of collecting personal information, we will identify the purposes for which
-                    information is being collected.</li>
-                <li>We will collect and use of personal information solely with the objective of fulfilling those
-                    purposes specified by us and for other compatible purposes, unless we obtain the consent of the
-                    individual concerned or as required by law.
-                </li>
-                <li>We will only retain personal information as long as necessary for the fulfilment of those purposes.
-                </li>
-                <li>We will collect personal information by lawful and fair means and, where appropriate, with the
-                    knowledge or consent of the individual concerned.
-                </li>
-                <li>Personal data should be relevant to the purposes for which it is to be used, and, to the extent
-                    necessary for those purposes, should be accurate, complete, and up-to-date.
-                </li>
-                <li>
-                    We will protect personal information by reasonable security safeguards against loss or theft, as
-                    well as unauthorized access, disclosure, copying, use or modification.
-                </li>
-                <li>We will make readily available to customers information about our policies and practices relating to
-                    the management of personal information.
-                </li>
-            </ul>
-            <p>
-                We are committed to conducting our business in accordance with these principles in order to ensure that
-                the confidentiality of personal information is protected and maintained.
-            </p>
+        <div class="container policy-terms">
+            <div class="policy-heading mt-3 mb-3">
+                <h1>Privacy Policy
+                </h1>
+                <hr>
+            </div>
+            <div class="container policy-paragraphs padspacing">
+                <p>
+                    Your privacy is very important to us. Accordingly, we have developed this Policy in order for you to
+                    understand how we collect, use, communicate and disclose and make use of personal information. The
+                    following outlines our privacy policy.
+                </p>
+                <ul class="policy-listings">
+
+                    <li>Before or at the time of collecting personal information, we will identify the purposes for
+                        which
+                        information is being collected.</li>
+                    <li>We will collect and use of personal information solely with the objective of fulfilling those
+                        purposes specified by us and for other compatible purposes, unless we obtain the consent of the
+                        individual concerned or as required by law.
+                    </li>
+                    <li>We will only retain personal information as long as necessary for the fulfilment of those
+                        purposes.
+                    </li>
+                    <li>We will collect personal information by lawful and fair means and, where appropriate, with the
+                        knowledge or consent of the individual concerned.
+                    </li>
+                    <li>Personal data should be relevant to the purposes for which it is to be used, and, to the extent
+                        necessary for those purposes, should be accurate, complete, and up-to-date.
+                    </li>
+                    <li>
+                        We will protect personal information by reasonable security safeguards against loss or theft, as
+                        well as unauthorized access, disclosure, copying, use or modification.
+                    </li>
+                    <li>We will make readily available to customers information about our policies and practices
+                        relating to
+                        the management of personal information.
+                    </li>
+                </ul>
+                <p>
+                    We are committed to conducting our business in accordance with these principles in order to ensure
+                    that
+                    the confidentiality of personal information is protected and maintained.
+                </p>
+            </div>
         </div>
-    </div>
+    </section>
+    <!-- ----footer----- -->
     <footer class="footer-block">
         <div class="container">
             <div class="row my-5">
                 <div class="col-md-4 col-sm-12 mb-3 address-details">
-                    <h1>C2 Hire</h1>
+                    <h1>C2 Hire.</h1>
                     <p>ADDRESS</p>
                     <p>Plot no: 32, jayabheri Enclave Phase-2, Gachibowli, Hyderabad-500032</p>
                     <p>
@@ -145,9 +154,9 @@
                         Send us a message
                     </button>
                     <div class="d-block policy-links">
-                        <a href="">Privacy Policy </a>|
-                        <a href="">Terms & conditions </a>|
-                        <a href="">Refund Policy </a>
+                        <a href="privacy-policy.html" target="blank">Privacy Policy </a>|
+                        <a href="terms-conditions.html" target="blank">Terms & conditions </a>|
+                        <a href="refund-policy.html" target="blank">Refund Policy </a>
                     </div>
                 </div>
             </div>
